src/objects/ContractLineItem.object
<CustomObject>
    <fields>
        <fullName>CH_ASWSRelevant__c</fullName>
        <description>Flag if the SI is marked to be relevant for Active Software Support (ASWS)
0=non ASWS contract (CDB integration sending a number 0)
1= ASWS Optimal Service Package (CDB integration sending a number 1)
2= ASWS Essential Service Package (CDB integration sending a number 2)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ASWS_relevant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Account__c</fullName>
        <formula>ServiceContract.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_BusinessHourName__c</fullName>
        <description>Used to store the input-value of the name of the Business Hours to be able to do a trigger update for the BusinessHoursId later on.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Hour Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_BusinessHour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CDB will send the Salesforce Business Hours name and we need to do a lookup against the Salesforce Business Hours based on the Business Hours name.</description>
        <label>Business Hour</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_CARES_CSEntryId__c</fullName>
        <description>CARES CD Entry ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CARES CS Entry ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CARES_LineItem__c</fullName>
        <description>CARES Line Item</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CARES Line Item</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CA_ContractLineItem_Status__c</fullName>
        <description>- Active if the system date is equal to or later than the Start Date and equal to or earlier than the End Date.
- Expired if the system date is later than the End Date.
- Inactive if the system date is earlier than the Start Date</description>
        <formula>IF( 
AND(TODAY() &gt;= StartDate, TODAY()&lt;= EndDate),&apos;Active&apos;, 
IF(TODAY() &gt; EndDate,&apos;Expired&apos;, 
IF(TODAY() &lt; StartDate,&apos;Inactive&apos;, 
&apos;Inactive&apos; 
)))</formula>
        <label>CH Contract Line Item Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ContractId__c</fullName>
        <description>New custom field. Used as a reference for checking service contracts in CDB</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB Contract ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_EntitlementId__c</fullName>
        <description>New custom field. Used along with CH_CDB_Contract_ID as a reference for checking service contracts in CDB</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB Entitlement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CDB_ExternalAssetId__c</fullName>
        <description>New custom field to store the iPaaS concatinated value (Account Refential ID, Iso 2 Code of the Account, Product (Solution Id + Product Id + Variant Id + Release Id)</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CDB External Asset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CostObjectType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CostObject__c</fullName>
        <description>to store the value coming from CDB as part of US.SRM.1031</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CountryCode__c</fullName>
        <description>Used to store country code of an asset which is nothing but account&apos;s country code.</description>
        <formula>Asset.CH_CountryCode__c</formula>
        <label>Country Code TO DELETE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CountryISO2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CountryISOName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CountryName__c</fullName>
        <description>Used to store country name of an account through asset country name</description>
        <formula>Asset.CH_CountryName__c</formula>
        <label>Country Name TO DELETE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_CoverageGroup__c</fullName>
        <description>Coverage Group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Coverage Group</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_CoverageType__c</fullName>
        <description>Coverage Type</description>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select Assets</fullName>
                </value>
                <value>
                    <fullName>All Assets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Criteria__c</fullName>
        <description>Critieria</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Criteria</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EMEGlobalPlantCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EME Global Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EMEGlobalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EME Global SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EMELocalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EME Local SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change for the integration / migration to correctly link CDB Service offering against the right Entitlement Id using lookup on Entitlement name in which we use the field Service Mapping Id (CDB sends Salesforce the Entitlement Process name). This is Salesforce Reference. Salesforce needs to trigger the linkage after the Entitlement object is processed.</description>
        <label>Entitlement ID</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_EquipmentLocationBasedTZCoverage__c</fullName>
        <description>Equipmnet Location Based TZ Coverage</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Equipment Location Based TZ Coverage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Hidden_Searchfield__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hidden Searchfield</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_LastFullResynchDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Full Resynch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_LatestCDBEntitlementId__c</fullName>
        <description>CH: This field will be kept up to date in such a way that when contracts are replaced over time with same coverage it will contain a pointer to the latest contract line item in the series of replacements.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Latest CDB Entitlement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_LineItemEntitlementScript__c</fullName>
        <description>CDB/CARES Service Contract Header level Entitlement Script (instructions to Welcome Center Agent - Lightning Componenent to pull out this information from Service Contract Header Description field / Contract Line Item Description field). User story NOKIASC-1067 Specific instructions in Entitlement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Entitlement Script</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_LineItemScript_flag__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To check Line Item Script Flag</description>
        <label>Line Item Script Flag</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_NokiaProductId__c</fullName>
        <description>used to store the incoming CDB id_product-field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Product Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_PCICode__c</fullName>
        <description>Stores PCI Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PCI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_PreviousCDBEntitlementId__c</fullName>
        <description>CH: This field will be populated by CDB team. When Contract A is replaced with Contract B in CDB, if the same coverage (Product, Variant, Solution, Product Release, Services and Country) is on new contract line item, this field will point to the contract line item, via CDB Entitlement ID, which it is replacing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous CDB Entitlement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_PriceBookEntry__c</fullName>
        <description>Custom CH PriceBookEntry-field for storing the incoming PriceBookEntry-code hardcoded 5000001.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH PriceBookEntry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_QtyCoveredNetworkElementAssets__c</fullName>
        <description>counts the number of Covered Network Element Asset records linked to the corresponding Contract Line Item and has Status = Active.</description>
        <label>Quantity Covered Network Element Assets</label>
        <summaryFilterItems>
            <field>CH_CoveredNetworkElementAsset__c.CH_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>CH_CoveredNetworkElementAsset__c.CH_ContractLineItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CH_QuantityOfCoveredAssets__c</fullName>
        <description>Quantity of Covered Assets</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CARES Quantity of Covered Assets</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_RecordTypeCheck__c</fullName>
        <description>To check record type for case handling project. Advantage of keeping this, whenever we have change in record type then no need to add those changes in every rule.</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_SalesBundleCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales  Bundle Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SalesBundleDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales  Bundle Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Classification</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceItemCode__c</fullName>
        <description>Code of the CDB service item.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceItemDescription__c</fullName>
        <description>CDB Service Item Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceMappingId__c</fullName>
        <description>Name of Entitlement Process in SF which will enable mapping.</description>
        <label>Service Mapping Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_ServiceMappingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_ServiceOffering__c</fullName>
        <description>Service Offering</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Offering</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceTypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ServiceType__c</fullName>
        <description>Service Type</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Internal Support</fullName>
                </value>
                <value>
                    <fullName>Advanced Exchange in Days</fullName>
                </value>
                <value>
                    <fullName>Advanced Exchange in Hours</fullName>
                </value>
                <value>
                    <fullName>Return for Repair or Replacement</fullName>
                </value>
                <value>
                    <fullName>Spare Part Sales</fullName>
                </value>
                <value>
                    <fullName>MVR Identical Repair</fullName>
                </value>
                <value>
                    <fullName>Return for Exchange</fullName>
                </value>
                <value>
                    <fullName>Identical Repair</fullName>
                </value>
                <value>
                    <fullName>Eco Repair</fullName>
                </value>
                <value>
                    <fullName>Return for Modification</fullName>
                </value>
                <value>
                    <fullName>Dead On Arrival, Advanced Exchange in Days</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival, Return for Repair or Replacement</fullName>
                </value>
                <value>
                    <fullName>Return for Upgrade</fullName>
                </value>
                <value>
                    <fullName>Return for Certification</fullName>
                </value>
                <value>
                    <fullName>MVR Return for Repair or Replacement</fullName>
                </value>
                <value>
                    <fullName>Commissioning Spares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SpecialServiceId__c</fullName>
        <description>Special Service ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Service ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SpecialServiceText__c</fullName>
        <description>Special Service Text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Service Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TQGlobalPlantCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TQ Global Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TQGlobalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TQ Global SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TQLocalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TQ Local SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TRGlobalPlantCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TR Global Plant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TRGlobalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TR Global SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_TRLocalSVO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TR Local SVO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_isCNEACopyRequied__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CH_isCNEACopyRequied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Documentation</fullName>
                </value>
                <value>
                    <fullName>Application Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entitlements_Access__c</fullName>
        <label>Entitlements Access</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entitlement_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manuals and Guides</fullName>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                </value>
                <value>
                    <fullName>Doc center</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalPricebookEntryId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Pricebook Entry Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_AdditionalSIInfo1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional SI Info 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_AdditionalSIInfo2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional SI Info 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_AdditionalSIInfo3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional SI Info 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_Hardware_Service_Feature__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hardware Service Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_IncotermCity__c</fullName>
        <description>Created as part of US.SRM.1667A</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterm City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_IncotermType__c</fullName>
        <description>Created As Part of US.SRM.1667A</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Incoterm Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_InvoicingTypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoicing Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_InvoicingType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoicing Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_LeadTimeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Time Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PartCoverage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Product_Version_Code__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_QuotationRequiredFlag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quotation Required Flag</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SAPP20LineItem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP P20 Line item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_SeparateOrderPerPart__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Separate Order per Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ServiceContractName__c</fullName>
        <formula>ServiceContract.Name</formula>
        <label>Service Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_ServiceContractNumber__c</fullName>
        <formula>IF(ServiceContract.CH_SAP_ContractNumber__c!=NULL,ServiceContract.CH_SAP_ContractNumber__c,ServiceContract.CH_CARES_ServiceAgreement__c)</formula>
        <label>Service Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Service_Contract_Line_Item__c</fullName>
        <formula>IF( CH_CARES_LineItem__c=null ,  HWS_SAPP20LineItem__c , CH_CARES_LineItem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Line Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_WarrantyVerificationRequired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warranty Verification Required</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_External_Contract_Line_Item_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Nokia Support Portal specific field.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Nokia Support Portal specific field.</inlineHelpText>
        <label>External Contract Line Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_External_Status__c</fullName>
        <description>Nokia Support Portal specific field</description>
        <inlineHelpText>Nokia Support Portal specific field</inlineHelpText>
        <label>External Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sellable_Product_Name__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sellable Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Number__c</fullName>
        <formula>ServiceContract.ParentServiceContract.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>ServiceContract.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CH_LineItemEndDateRule</fullName>
        <active>true</active>
        <description>It is used to restrict contract line item if its end date is more than service contract end date.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(EndDate)),
EndDate &gt; ServiceContract.EndDate
)</errorConditionFormula>
        <errorDisplayField>EndDate</errorDisplayField>
        <errorMessage>Contract Line Item End Date should be earlier than the Service Contract End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CH_Rstrict_Chnge_in_Prev_Entitl_ID_field</fullName>
        <active>false</active>
        <description>If the value of Previous CDB Entitlement ID is updated from one Non Null  or a Non Null value to another Non Null value, display error “Previous CDB Entitlement ID cannot be modified from one value to another.”</description>
        <errorConditionFormula>(PRIORVALUE(CH_PreviousCDBEntitlementId__c) !=(CH_PreviousCDBEntitlementId__c)  &amp;&amp; (CH_PreviousCDBEntitlementId__c !=NULL &amp;&amp; PRIORVALUE(CH_PreviousCDBEntitlementId__c)!=NULL))</errorConditionFormula>
        <errorMessage>Previous CDB Entitlement ID cannot be modified from one value to another.</errorMessage>
    </validationRules>
</CustomObject>