src/objects/ContractLineItem/validationRules/CH_LineItemEndDateRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_LineItemEndDateRule</fullName>
    <active>true</active>
    <description>It is used to restrict contract line item if its end date is more than service contract end date.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(EndDate)),
EndDate &gt; ServiceContract.EndDate
)</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>Contract Line Item End Date should be earlier than the Service Contract End Date.</errorMessage>
</ValidationRule>