src/objects/ContractLineItem/validationRules/CH_Rstrict_Chnge_in_Prev_Entitl_ID_field.validationRule-meta.xml
<ValidationRule>
    <fullName>CH_Rstrict_Chnge_in_Prev_Entitl_ID_field</fullName>
    <active>false</active>
    <description>If the value of Previous CDB Entitlement ID is updated from one Non Null  or a Non Null value to another Non Null value, display error “Previous CDB Entitlement ID cannot be modified from one value to another.”</description>
    <errorConditionFormula>(PRIORVALUE(CH_PreviousCDBEntitlementId__c) !=(CH_PreviousCDBEntitlementId__c)  &amp;&amp; (CH_PreviousCDBEntitlementId__c !=NULL &amp;&amp; PRIORVALUE(CH_PreviousCDBEntitlementId__c)!=NULL))</errorConditionFormula>
    <errorMessage>Previous CDB Entitlement ID cannot be modified from one value to another.</errorMessage>
</ValidationRule>